@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Sep 2013; Johann Schmitz <ercpe@gentoo.org> files/3.2.4-build.xml,
+  spring-core-3.2.4.ebuild:
+  Polished spring-core: Make tests run, simplified ebuild + enhanced build.xml
+
   13 Sep 2013; Johann Schmitz <ercpe@gentoo.org> spring-core-3.2.4.ebuild:
   Fixed dependencies
 
